# libhfx

./: .gitignore  meson.build  ucode.ld  ucode_template.ld
gl_test/cube/: main.c
include/: hfx.h  hfx_cmds.h
include/GL/: gl.h
include/ucode/: fixed_vector.h  hfx_asm.h  rsp.h
libhfx_gl/include/: hfx_int.h  hfx_types.h
libhfx_gl/src/: hfx.c
libhfx_src/: main.c
libhfx_src/include/: hfx_int.h  hfx_rb.h  hfx_rdp.h  hfx_regs.h  hfx_types.h
libhfx_src/src/: hfx.c  hfx_cmd.c  hfx_cmd_dma.c  hfx_dispatch.c  hfx_display.c  hfx_math.c  hfx_matrix.c  hfx_rb.c  hfx_render.c  hfx_render_gl.c  hfx_state.c  hfx_texture.c  linker.s
tests/: meson.build
tests/basic_rb_test/: main.c
tests/basic_rdp_test/: main.c
tests/hfx_clear/: main.c
tests/hfx_cube/: main.c
tests/hfx_draw_single_tri/: main.c
tests/hfx_draw_tri_no_transform/: main.c
tests/hfx_persp/: main.c
tests/hfx_persp_tex/: main.c
tests/hfx_tex_tri/: main.c
tests/rdp_buffer_wrap/: main.c
tests/ucode_mul_mat_vec/: loader.S  main.c  ucode.c  ucode_asm.S
tests/ucode_sort/: loader.S  main.c  ucode.c  ucode_asm.S
tests/ucode_tri/: loader.S  main.c  ucode.c  ucode_asm.S
ucode_c_src/: build.txt  crt.S  hfx_main.c  hfx_ucode.c  ucode.ld
ucode_src/: crt.S  hfx_cmd_dma_read.s  hfx_cmd_int.s  hfx_cmd_nop.s  hfx_cmd_set_display.s  hfx_main.c  hfx_rdp.s  main.s
ucode_src/include/: mat_vec.S  sort.S  tri.S
ucode_src/src/: crt.S  hfx_main.c
